--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
                            <!-- navBar -->
     <header class="container  sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><h1 id="top-hedding">The One Market Access</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                   <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active bg-color">
                     <div class="row d-flex align-items-center p-5 m-5 shadow-lg rounded-3">
                         <div class="col-md-7">
                           <h1>"14"Inch Led Tv</h1>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item bg-color">
                     <div class="row d-flex align-items-center p-5 m-5 shadow-lg rounded-3">
                         <div class="col-md-7">
                           <h1>"18"Inch Led TV</h1>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item bg-color">
                     <div class="row d-flex align-items-center p-5 m-5 shadow-lg rounded-3">
                         <div class="col-md-7">
                           <h1>"22"Inch Mega Led TV</h1>
@@ -103,7 +103,7 @@
                     <img src="images/tv5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">"28"Inch Mega LED TV</h5>
-                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni quaerat impedit iste, eligendi maxime fugiat, mollitia consequuntur inventore totam deserunt numquam doloribus incidunt tenetur praesentium! Debitis voluptate dolores tempora illo.</p>
+                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni quaerat impedit iste, eligendi maxime fugiat, mollitia consequuntur inventore totam deserunt numquam doloribus.</p>
                       <b class="item-price">$399</b>
                       <button class="button-1">BUY NOW</button>
                     </div>
